<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/background"
                android:paddingBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="text"
            android:textColorHint="@android:color/black"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/edit_text_surname"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="text"
            android:textColorHint="@android:color/black"
            android:layout_height="wrap_content"
            android:hint="@string/surname"/>

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:maxLines="3"
            android:minLines="3"
            android:textColorHint="@android:color/black"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/description"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_insert_into_db"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/insert"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/text_view_row_id"
                  android:padding="10dp"
                  android:textStyle="bold"
                  android:textSize="20sp"
                  android:text="@string/row_id"/>


    </LinearLayout>

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:layout_alignParentBottom="true"
               android:layout_centerInParent="true"
               android:background="@drawable/jopac"/>

</RelativeLayout>
